# spiriter

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py  processing.py
app/static/: app.js  index.html  styles.css
